# portfolio

./: .env.production  .gitignore  README.md  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  wrangler.toml
.astro/: data-store.json  settings.json
backend/: Cargo.toml  README.md
backend-worker/: Cargo.toml  log.json  log2.json  schema.sql  wrangler.toml
backend-worker/src/: lib.rs
backend/migrations/: 20241120000000_init.sql  20241120140000_seed_data.sql
backend/src/: auth_middleware.rs  config.rs  db.rs  error.rs  main.rs
backend/src/models/: auth.rs  content.rs  mod.rs
backend/src/routes/: auth.rs  contact.rs  content.rs  health.rs  mod.rs
public/: llms.txt  robots.txt
src/: App.tsx  index.css  main.tsx
src/components/: Card.astro  Contact.tsx  Footer.astro  Footer.tsx  Hero.astro  Hero.tsx  Navbar.astro  Navbar.tsx  ProjectCard.astro  ProjectSkeleton.tsx  Projects.tsx  ProtectedRoute.tsx  SkillSkeleton.tsx  Skills.tsx  SkillsGrid.astro  SocialLinks.astro  TechBadge.astro  ThemeToggle.astro
src/components/ui/: theme-toggle.tsx
src/context/: AuthContext.tsx
src/data/: projects.json
src/layouts/: BaseLayout.astro  Layout.astro
src/lib/: api.ts
src/pages/: Admin.tsx  Index.tsx  Login.tsx  NotFound.tsx  about.astro  admin.astro  contact.astro  index.astro  projects.astro
src/styles/: global.css
src/types/: index.ts
